--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detona Ralph</title>
+    <title>Detona Cartman</title>
 
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,6 +55,6 @@
 
         </div>
     </div>
-    <script src="/src/scripts/engine.js"></script>
+    <script src="./src/scripts/engine.js"></script>
 </body>
 </html>
